# richardcampendotcom

./: .babelrc  .gitignore  .gitmodules  LICENSE.txt  README.md  Vagrantfile  campen.co.py  fly.toml  install-requirements.sh  manage.sh  package-lock.json  package.json  poetry.sh  requirements.txt  richardcampendotcom.nomad  run.py  run.sh  tailwind.config.js  up.sh  webpack.config.js
ansible/: Makefile  (+3 more)
app/: __init__.py  celery_app.py  manage.py  pyproject.toml  requirements.txt  tasks.py  trackers.py  views.py  webpack-stats.json
app/app/: __init__.py  context_processors.py  models.py  trackers.py  urls.py  views.py  wsgi.py
app/app/migrations/: 0002_create_homepage.py  0003_aboutpage.py  0004_publicationspage.py  0005_remove_publicationspage_publications.py  0006_publicationspage_publications.py
app/app/models/: __init__.py
app/app/settings/: base.py  development.py  local.py
app/app/templates/: 404.html  about.html  base.html  blog.html  blog_listing.html  index.html  macros.html  projects.html  publications.html  software.html
app/blog/: nginx-mod-zip-for-dynamic-file-zipping.md
app/config/: .gitignore  __init__.py  base.py
app/config/dev/: campen_co_dev_local.ini  campen_co_dev_local.nginx.conf
app/config/production/: campen_co.ini  campen_co.nginx.conf
app/content/: about.md
app/migrations/: env.py
app/migrations/versions/: d1575054a0ab_.py  ee6012c9e6d4_.py
app/static/: webpack-manifest.json
app/static/css/: main.css  main.ea463012c720539ad43f.css
app/templates/: base.html  index.html  projects.html  publications.html  software.html
(+64 files in other folders)
