[tool.poetry]
name = "richardcampendotcom"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "~3.8"
flask = "~2"
flask-sitemap = "~0.4"
gunicorn = "~20"
psycopg2-binary = "~2"
requests = "~2"
whitenoise = "~6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
