[tool.poetry]
name = "richardcampendotcom"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "~3.12"
flask = "~2"
flask-sitemap = "~0.4"
gunicorn = "~20"
psycopg2-binary = "~2"
requests = "~2"
whitenoise = "~6"
markdown = "^3.4.1"
pygments = "^2.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
