[tool.poetry]
name = "richardcampendotcom"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "~3.12"
flask = "~3"
flask-sitemap = "~0.4"
gunicorn = "~21"
whitenoise = "~6"
markdown = "~3"
pygments = "~2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
